syntax = "proto3";

option go_package = "github.com/blobcache/blobcache/pkg/tries";

message Entry {
    bytes key = 1;
    bytes value = 2;
}

message ChildRef {
    bytes id = 1;
    bytes dek = 2;
}

message Node {
    bytes prefix = 1;
    repeated Entry entries = 2;
    repeated ChildRef children = 3;
}
