syntax = "proto3";

package blobcache.tries;

option go_package = "blobcache.io/blobcache/src/internal/tries";

message Entry {
    bytes key = 1;
    bytes value = 2;
}

message Node {
    repeated Entry entries = 1;
}

message Index {
    bytes ref = 1;
    bool is_parent = 2;
    uint64 count = 3;
}
